src/nncv/compiler/Frontend/AntlrBackend/AutoTenV1Parser.cpp

// Generated from ../AutoTenV1Parser.g4 by ANTLR 4.13.0

#include "nncv/compiler/Frontend/AntlrBackend/AutoTenV1ParserListener.h"
#include "nncv/compiler/Frontend/AntlrBackend/AutoTenV1ParserVisitor.h"

#include "nncv/compiler/Frontend/AntlrBackend/AutoTenV1Parser.h"

using namespace antlrcpp;
using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AutoTenV1ParserStaticData final {
  AutoTenV1ParserStaticData(std::vector<std::string> ruleNames,
                            std::vector<std::string> literalNames,
                            std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)),
        literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AutoTenV1ParserStaticData(const AutoTenV1ParserStaticData&) = delete;
  AutoTenV1ParserStaticData(AutoTenV1ParserStaticData&&) = delete;
  AutoTenV1ParserStaticData& operator=(const AutoTenV1ParserStaticData&) = delete;
  AutoTenV1ParserStaticData& operator=(AutoTenV1ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag autotenv1parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    AutoTenV1ParserStaticData* autotenv1parserParserStaticData = nullptr;

void autotenv1parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (autotenv1parserParserStaticData != nullptr) { return; }
#else
  assert(autotenv1parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AutoTenV1ParserStaticData>(
      std::vector<std::string>{"sourceFile",
                               "packageClause",
                               "compileFlags",
                               "declaration",
                               "typeDecl",
                               "typeSpec",
                               "type_",
                               "typeName",
                               "typeLit",
                               "arrayType",
                               "arrayLength",
                               "elementType",
                               "pointerType",
                               "implType",
                               "sliceType",
                               "mapType",
                               "methodSpec",
                               "functionType",
                               "varDecl",
                               "varSpec",
                               "signature",
                               "result",
                               "parameters",
                               "index",
                               "slice_",
                               "typeAssertion",
                               "arguments",
                               "methodExpr",
                               "parameterDecl",
                               "expression",
                               "primaryExpr",
                               "conversion",
                               "nonNamedType",
                               "operand",
                               "expressionList",
                               "identifierList",
                               "literal",
                               "basicLit",
                               "operandName",
                               "qualifiedIdent",
                               "compositeLit",
                               "literalType",
                               "literalValue",
                               "elementList",
                               "keyedElement",
                               "key",
                               "element",
                               "structType",
                               "fieldDecl",
                               "embeddedField",
                               "functionLit",
                               "functionDecl",
                               "block",
                               "statementList",
                               "statement",
                               "simpleStmt",
                               "expressionStmt",
                               "incDecStmt",
                               "assignment",
                               "assign_op",
                               "shortVarDecl",
                               "emptyStmt",
                               "labeledStmt",
                               "returnStmt",
                               "breakStmt",
                               "continueStmt",
                               "gotoStmt",
                               "fallthroughStmt",
                               "ifStmt",
                               "switchStmt",
                               "exprSwitchStmt",
                               "exprCaseClause",
                               "exprSwitchCase",
                               "typeSwitchStmt",
                               "typeSwitchGuard",
                               "typeCaseClause",
                               "typeSwitchCase",
                               "typeList",
                               "forStmt",
                               "forClause",
                               "whileStmt",
                               "doWhileStmt",
                               "eos"},
      std::vector<std::string>{"",           "",          "",
                               "",           "",          "",
                               "",           "",          "'int8'",
                               "'int16'",    "'int32'",   "'int64'",
                               "'float32'",  "'float64'", "'char'",
                               "'bool'",     "'string'",  "'Tensor'",
                               "'var'",      "'false'",   "'true'",
                               "'void'",     "'nil'",     "'break'",
                               "'continue'", "'goto'",    "'fallthrough'",
                               "'if'",       "'while'",   "'for'",
                               "'else'",     "'do'",      "'switch'",
                               "'case'",     "'default'", "'func'",
                               "'return'",   "'struct'",  "'type'",
                               "'package'",  "'impl'",    "'pub'",
                               "'sizeof'",   "'('",       "')'",
                               "'['",        "']'",       "'{'",
                               "'}'",        "'+'",       "'-'",
                               "'*'",        "'/'",       "",
                               "",           "'&'",       "'|'",
                               "'~'",        "",          "'='",
                               "':='",       "'<'",       "'>'",
                               "'<<'",       "'>>'",      "'!='",
                               "'=='",       "'<='",      "'>='",
                               "",           "",          "'++'",
                               "'--'",       "','",       "'->'",
                               "':'",        "'.'",       "'.*'",
                               "'->*'",      "'@'",       "';'",
                               "'map'",      "'...'"},
      std::vector<std::string>{"",
                               "IntegerLiteral",
                               "CharacterLiteral",
                               "FloatingLiteral",
                               "StringLiteral",
                               "BooleanLiteral",
                               "PointerLiteral",
                               "UserDefinedLiteral",
                               "Int8",
                               "Int16",
                               "Int32",
                               "Int64",
                               "Float32",
                               "Float64",
                               "Char",
                               "Bool",
                               "String",
                               "Tensor",
                               "Var",
                               "False_",
                               "True_",
                               "Void",
                               "Nilptr",
                               "Break",
                               "Continue",
                               "Goto",
                               "Fallthrough",
                               "If",
                               "While",
                               "For",
                               "Else",
                               "Do",
                               "Switch",
                               "Case",
                               "Default",
                               "Function",
                               "Return",
                               "Struct",
                               "Type",
                               "Package",
                               "Impl",
                               "Public",
                               "Sizeof",
                               "LeftParen",
                               "RightParen",
                               "LeftBracket",
                               "RightBracket",
                               "LeftBrace",
                               "RightBrace",
                               "Plus",
                               "Minus",
                               "Star",
                               "Div",
                               "Mod",
                               "Caret",
                               "And",
                               "Or",
                               "Tilde",
                               "Not",
                               "Assign",
                               "DeclareAssign",
                               "Less",
                               "Greater",
                               "LeftShift",
                               "RightShift",
                               "NotEqual",
                               "Equal",
                               "LessEqual",
                               "GreaterEqual",
                               "AndAnd",
                               "OrOr",
                               "PlusPlus",
                               "MinusMinus",
                               "Comma",
                               "ArrowReturnType",
                               "Colon",
                               "Dot",
                               "DotStar",
                               "ArrowStar",
                               "At",
                               "Semi",
                               "Map",
                               "Ellipsis",
                               "Identifier",
                               "DecimalLiteral",
                               "OctalLiteral",
                               "HexadecimalLiteral",
                               "BinaryLiteral",
                               "Integersuffix",
                               "UserDefinedIntegerLiteral",
                               "UserDefinedFloatingLiteral",
                               "UserDefinedStringLiteral",
                               "UserDefinedCharacterLiteral",
                               "Whitespace",
                               "Newline",
                               "BlockComment",
                               "LineComment"});
  staticData->serializedATN = antlr4::atn::SerializedATNView(
      serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) {
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  autotenv1parserParserStaticData = staticData.release();
}

}  // namespace

AutoTenV1Parser::AutoTenV1Parser(TokenStream* input)
    : AutoTenV1Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AutoTenV1Parser::AutoTenV1Parser(TokenStream* input,
                                 const antlr4::atn::ParserATNSimulatorOptions& options)
    : Parser(input) {
  AutoTenV1Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(
      this, *autotenv1parserParserStaticData->atn, autotenv1parserParserStaticData->decisionToDFA,
      autotenv1parserParserStaticData->sharedContextCache, options);
}

AutoTenV1Parser::~AutoTenV1Parser() { delete _interpreter; }

const atn::ATN& AutoTenV1Parser::getATN() const { return *autotenv1parserParserStaticData->atn; }

std::string AutoTenV1Parser::getGrammarFileName() const { return "AutoTenV1Parser.g4"; }

const std::vector<std::string>& AutoTenV1Parser::getRuleNames() const {
  return autotenv1parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& AutoTenV1Parser::getVocabulary() const {
  return autotenv1parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AutoTenV1Parser::getSerializedATN() const {
  return autotenv1parserParserStaticData->serializedATN;
}

//----------------- SourceFileContext
//------------------------------------------------------------------

AutoTenV1Parser::SourceFileContext::SourceFileContext(ParserRuleContext* parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AutoTenV1Parser::PackageClauseContext* AutoTenV1Parser::SourceFileContext::packageClause() {
  return getRuleContext<AutoTenV1Parser::PackageClauseContext>(0);
}

std::vector<AutoTenV1Parser::EosContext*> AutoTenV1Parser::SourceFileContext::eos() {
  return getRuleContexts<AutoTenV1Parser::EosContext>();
}

AutoTenV1Parser::EosContext* AutoTenV1Parser::SourceFileContext::eos(size_t i) {
  return getRuleContext<AutoTenV1Parser::EosContext>(i);
}

tree::TerminalNode* AutoTenV1Parser::SourceFileContext::EOF() {
  return getToken(AutoTenV1Parser::EOF, 0);
}

std::vector<AutoTenV1Parser::FunctionDeclContext*>
AutoTenV1Parser::SourceFileContext::functionDecl() {
  return getRuleContexts<AutoTenV1Parser::FunctionDeclContext>();
}

AutoTenV1Parser::FunctionDeclContext* AutoTenV1Parser::SourceFileContext::functionDecl(size_t i) {
  return getRuleContext<AutoTenV1Parser::FunctionDeclContext>(i);
}

std::vector<AutoTenV1Parser::DeclarationContext*>
AutoTenV1Parser::SourceFileContext::declaration() {
  return getRuleContexts<AutoTenV1Parser::DeclarationContext>();
}

AutoTenV1Parser::DeclarationContext* AutoTenV1Parser::SourceFileContext::declaration(size_t i) {
  return getRuleContext<AutoTenV1Parser::DeclarationContext>(i);
}

size_t AutoTenV1Parser::SourceFileContext::getRuleIndex() const {
  return AutoTenV1Parser::RuleSourceFile;
}

void AutoTenV1Parser::SourceFileContext::enterRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->enterSourceFile(this);
}

void AutoTenV1Parser::SourceFileContext::exitRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->exitSourceFile(this);
}

std::any AutoTenV1Parser::SourceFileContext::accept(tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AutoTenV1ParserVisitor*>(visitor))
    return parserVisitor->visitSourceFile(this);
  else
    return visitor->visitChildren(this);
}

AutoTenV1Parser::SourceFileContext* AutoTenV1Parser::sourceFile() {
  SourceFileContext* _localctx = _tracker.createInstance<SourceFileContext>(_ctx, getState());
  enterRule(_localctx, 0, AutoTenV1Parser::RuleSourceFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(166);
    packageClause();
    setState(167);
    eos();
    setState(176);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 309237907456) != 0)) {
      setState(170);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case AutoTenV1Parser::Function: {
          setState(168);
          functionDecl();
          break;
        }

        case AutoTenV1Parser::Var:
        case AutoTenV1Parser::Type: {
          setState(169);
          declaration();
          break;
        }

        default: throw NoViableAltException(this);
      }
      setState(172);
      eos();
      setState(178);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(179);
    match(AutoTenV1Parser::EOF);

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageClauseContext
//------------------------------------------------------------------

AutoTenV1Parser::PackageClauseContext::PackageClauseContext(ParserRuleContext* parent,
                                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* AutoTenV1Parser::PackageClauseContext::At() {
  return getToken(AutoTenV1Parser::At, 0);
}

tree::TerminalNode* AutoTenV1Parser::PackageClauseContext::Package() {
  return getToken(AutoTenV1Parser::Package, 0);
}

tree::TerminalNode* AutoTenV1Parser::PackageClauseContext::StringLiteral() {
  return getToken(AutoTenV1Parser::StringLiteral, 0);
}

size_t AutoTenV1Parser::PackageClauseContext::getRuleIndex() const {
  return AutoTenV1Parser::RulePackageClause;
}

void AutoTenV1Parser::PackageClauseContext::enterRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->enterPackageClause(this);
}

void AutoTenV1Parser::PackageClauseContext::exitRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->exitPackageClause(this);
}

std::any AutoTenV1Parser::PackageClauseContext::accept(tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AutoTenV1ParserVisitor*>(visitor))
    return parserVisitor->visitPackageClause(this);
  else
    return visitor->visitChildren(this);
}

AutoTenV1Parser::PackageClauseContext* AutoTenV1Parser::packageClause() {
  PackageClauseContext* _localctx = _tracker.createInstance<PackageClauseContext>(_ctx, getState());
  enterRule(_localctx, 2, AutoTenV1Parser::RulePackageClause);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(181);
    match(AutoTenV1Parser::At);
    setState(182);
    match(AutoTenV1Parser::Package);
    setState(183);
    antlrcpp::downCast<PackageClauseContext*>(_localctx)->packageName =
        match(AutoTenV1Parser::StringLiteral);

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompileFlagsContext
//------------------------------------------------------------------

AutoTenV1Parser::CompileFlagsContext::CompileFlagsContext(ParserRuleContext* parent,
                                                          size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::At() {
  return getToken(AutoTenV1Parser::At, 0);
}

std::vector<tree::TerminalNode*> AutoTenV1Parser::CompileFlagsContext::Identifier() {
  return getTokens(AutoTenV1Parser::Identifier);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::Identifier(size_t i) {
  return getToken(AutoTenV1Parser::Identifier, i);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::Semi() {
  return getToken(AutoTenV1Parser::Semi, 0);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::Assign() {
  return getToken(AutoTenV1Parser::Assign, 0);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::True_() {
  return getToken(AutoTenV1Parser::True_, 0);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::False_() {
  return getToken(AutoTenV1Parser::False_, 0);
}

tree::TerminalNode* AutoTenV1Parser::CompileFlagsContext::StringLiteral() {
  return getToken(AutoTenV1Parser::StringLiteral, 0);
}

size_t AutoTenV1Parser::CompileFlagsContext::getRuleIndex() const {
  return AutoTenV1Parser::RuleCompileFlags;
}

void AutoTenV1Parser::CompileFlagsContext::enterRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->enterCompileFlags(this);
}

void AutoTenV1Parser::CompileFlagsContext::exitRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->exitCompileFlags(this);
}

std::any AutoTenV1Parser::CompileFlagsContext::accept(tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AutoTenV1ParserVisitor*>(visitor))
    return parserVisitor->visitCompileFlags(this);
  else
    return visitor->visitChildren(this);
}

AutoTenV1Parser::CompileFlagsContext* AutoTenV1Parser::compileFlags() {
  CompileFlagsContext* _localctx = _tracker.createInstance<CompileFlagsContext>(_ctx, getState());
  enterRule(_localctx, 4, AutoTenV1Parser::RuleCompileFlags);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(185);
    match(AutoTenV1Parser::At);
    setState(186);
    match(AutoTenV1Parser::Identifier);
    setState(191);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(187);
        matchWildcard();
        setState(188);
        match(AutoTenV1Parser::Identifier);
      }
      setState(193);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(198);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AutoTenV1Parser::Assign: {
        setState(194);
        match(AutoTenV1Parser::Assign);
        setState(195);
        match(AutoTenV1Parser::True_);
        break;
      }

      case AutoTenV1Parser::False_: {
        setState(196);
        match(AutoTenV1Parser::False_);
        break;
      }

      case AutoTenV1Parser::StringLiteral: {
        setState(197);
        match(AutoTenV1Parser::StringLiteral);
        break;
      }

      case AutoTenV1Parser::Semi: {
        break;
      }

      default: break;
    }
    setState(200);
    match(AutoTenV1Parser::Semi);

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext
//------------------------------------------------------------------

AutoTenV1Parser::DeclarationContext::DeclarationContext(ParserRuleContext* parent,
                                                        size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

AutoTenV1Parser::TypeDeclContext* AutoTenV1Parser::DeclarationContext::typeDecl() {
  return getRuleContext<AutoTenV1Parser::TypeDeclContext>(0);
}

AutoTenV1Parser::VarDeclContext* AutoTenV1Parser::DeclarationContext::varDecl() {
  return getRuleContext<AutoTenV1Parser::VarDeclContext>(0);
}

size_t AutoTenV1Parser::DeclarationContext::getRuleIndex() const {
  return AutoTenV1Parser::RuleDeclaration;
}

void AutoTenV1Parser::DeclarationContext::enterRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->enterDeclaration(this);
}

void AutoTenV1Parser::DeclarationContext::exitRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->exitDeclaration(this);
}

std::any AutoTenV1Parser::DeclarationContext::accept(tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AutoTenV1ParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

AutoTenV1Parser::DeclarationContext* AutoTenV1Parser::declaration() {
  DeclarationContext* _localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, AutoTenV1Parser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(204);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AutoTenV1Parser::Type: {
        enterOuterAlt(_localctx, 1);
        setState(202);
        typeDecl();
        break;
      }

      case AutoTenV1Parser::Var: {
        enterOuterAlt(_localctx, 2);
        setState(203);
        varDecl();
        break;
      }

      default: throw NoViableAltException(this);
    }

  } catch (RecognitionException& e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclContext
//------------------------------------------------------------------

AutoTenV1Parser::TypeDeclContext::TypeDeclContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* AutoTenV1Parser::TypeDeclContext::Type() {
  return getToken(AutoTenV1Parser::Type, 0);
}

std::vector<AutoTenV1Parser::TypeSpecContext*> AutoTenV1Parser::TypeDeclContext::typeSpec() {
  return getRuleContexts<AutoTenV1Parser::TypeSpecContext>();
}

AutoTenV1Parser::TypeSpecContext* AutoTenV1Parser::TypeDeclContext::typeSpec(size_t i) {
  return getRuleContext<AutoTenV1Parser::TypeSpecContext>(i);
}

tree::TerminalNode* AutoTenV1Parser::TypeDeclContext::LeftParen() {
  return getToken(AutoTenV1Parser::LeftParen, 0);
}

tree::TerminalNode* AutoTenV1Parser::TypeDeclContext::RightParen() {
  return getToken(AutoTenV1Parser::RightParen, 0);
}

std::vector<AutoTenV1Parser::EosContext*> AutoTenV1Parser::TypeDeclContext::eos() {
  return getRuleContexts<AutoTenV1Parser::EosContext>();
}

AutoTenV1Parser::EosContext* AutoTenV1Parser::TypeDeclContext::eos(size_t i) {
  return getRuleContext<AutoTenV1Parser::EosContext>(i);
}

size_t AutoTenV1Parser::TypeDeclContext::getRuleIndex() const {
  return AutoTenV1Parser::RuleTypeDecl;
}

void AutoTenV1Parser::TypeDeclContext::enterRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->enterTypeDecl(this);
}

void AutoTenV1Parser::TypeDeclContext::exitRule(tree::ParseTreeListener* listener) {
  auto parserListener = dynamic_cast<AutoTenV1ParserListener*>(listener);
  if (parserListener != nullptr) parserListener->exitTypeDecl(this);
}

std::any AutoTenV1Parser::TypeDeclContext::accept(tree::ParseTreeVisitor* visitor) {
  if (auto parserVisitor = dynamic_cast<AutoTenV1ParserVisitor*>(visitor))
    return parserVisitor->visitTypeDecl(this);
  else
    return visitor->visitChildren(this);
}

AutoTenV1Parser::TypeDeclContext* AutoTenV1Parser::typeDecl() {
  TypeDeclContext* _localctx = _tracker.createInstance<TypeDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, AutoTenV1Parser::RuleTypeDecl);
  size_t _la = 0;
